# whispy

./: .gitignore  LICENSE  config.example.toml  prompts.txt  pyproject.toml
docs/: PROJECT_PLAN.md
src/whispy/: __init__.py  __main__.py  app.py  audio.py  config.py  llm.py  stt.py  tts.py
tests/: test_config.py  test_llm.py  test_tts.py
