[project]
name = "whispy"
version = "0.1.0"
description = "Voice AI assistant for kids — talk to an AI using your microphone and speaker"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=1.24",
    "pywhispercpp>=1.2.0",
    "ollama>=0.4",
]

[project.optional-dependencies]
piper = ["piper-tts>=1.2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
whispy = "whispy.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whispy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
